<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Dedica MNS</string>
    <string name="menu_about_us">Acerca De</string>
    <string name="menu_logout">Logout</string>
    <string name="title_activity_login">Dedica MNS</string>
    <string name="connectButtonS">Conectar</string>
    <string name="remmbemberUserCheckS">Recordarme</string>
    <string name="userMNTextS">Usuario Media Net</string>
    <string name="passMNTextS">Contraseña</string>
    <string name="mnLogoS">Logo MediaNet</string>
    <string name="title_activity_month_view">Listado mes</string>
    <string name="title_activity_detail_day">Detalle Actividad</string>
    <string name="title_activity_main_menu">Dedica MNS</string>
    <string name="title_activity_batch_menu">Dedica MNS</string>
    <string name="title_activity_about">Acerca De</string>
    <string name="about_text">Aplicación para imputar las horas en las dedicaciones de MediaNet Software. \nAdmite varios proyectos por día. \n\nDesarrollada para minimizar el tiempo que perdemos en el apasionante mundo de la imputación de horas. \nTodos los accesos se hacen directamente a la web (html scraping, no hay servicios&#8230;). \nEl user y password se guardan internamente de manera segura.\n\nLa opción \"recarga de proyectos\" actualiza la base de datos con los proyectos actuales en medianet. Si al ir a imputar no encuentras tu proyecto, realiza la recarga. \n\nMás información en <a href="https://github.com/edwise/DedicaMNS">https://github.com/edwise/DedicaMNS</a>\n</string>
    <string name="batchTitle">Imputación en Batch mensual</string>
    <string name="monthLabelBatch">"Mes: "</string>
    <string name="yearLabelBatch">"Año: "</string>
    <string name="projectLabelBatch">"Proyecto: "</string>
    <string name="subprojectLabelBatch">"Subproyecto: "</string>
    <string name="taskLabelBatch">"Tarea: "</string>
    <string name="hourTypeLabelBatch">"Tipo horario: "</string>
    <string name="inputBatchButton">Imputar</string>
    <string name="cancelBatchButton">Cancelar</string>
    <string name="versionLabelAbout">Version</string>
    <string name="hourLabelDetail">"Horas: "</string>
    <string name="projectLabelDetail">"Proyecto: "</string>
    <string name="subprojectLabelDetail">"Subproyecto: "</string>
    <string name="taskLabelDetail">"Tarea: "</string>
    <string name="saveButtonDetail">Guardar</string>
    <string name="removeButtonDetail">Borrar</string>
    <string name="monthListTitle">Listado mensual</string>
    <string name="inputAndCheckByDayButton">Consulta e imputación por día</string>
    <string name="batchInputButton">Imputacion BATCH</string>
    <string name="monthBatchInputButton">Imputación batch mensual</string>
    <string name="msgConnected">¡Conectado!</string>
    <string name="msgWebError">Error de la web de dedicaciones</string>
    <string name="msgUserPassError">Introduce tu usuario y contraseña de Medianet</string>
    <string name="msgConnecting">Conectando&#8230;</string>
    <string name="msgConnectingAlert">Conexión en progreso, por favor, espera</string>
    <string name="msgGettingData">Obteniendo datos necesarios</string>
    <string name="msgGettingMonthData">Obteniendo datos del mes</string>
    <string name="msgPleaseWait">Por favor, espera&#8230;</string>
    <string name="msgErrorFormatHour">El formato de horas es incorrecto</string>
    <string name="msgErrorSelectProject">Debe seleccionar algún proyecto</string>
    <string name="msgSaveOK">Guardado registro de horas correctamente</string>
    <string name="msgRemoveOK">Borrado registro de horas correctamente</string>
    <string name="msgSaving">Guardando datos</string>
    <string name="msgRemoving">Borrando datos</string>
    <string name="title_activity_general_detail_day">Detalle día</string>
    <string name="msgRemoveAllActivities">Se van a borrar todas las actividades del día</string>
    <string name="msgContinue">¿Continuar?</string>
    <string name="msgAlertOK">OK</string>
    <string name="msgAlertCancel">Cancelar</string>
    <string name="msgRemovingActivities">Borrando actividades</string>
    <string name="msgInputProcessToExecute">Se va a ejecutar el proceso de imputación</string>
    <string name="msgSelectOneProject">Debe seleccionar algún proyecto</string>
    <string name="msgGettingDataMonth">Obteniendo datos del mes</string>
    <string name="msgInputBatchError">¡Error en la imputación batch!</string>
    <string name="msgInputBatchProccessFinished">¡Proceso de imputación terminado!</string>
    <string name="msgSeeInputHours">¿Desea ver el listado mensual de horas imputadas?</string>
    <string name="msgYES">SI</string>
    <string name="msgNO">NO</string>
    <string name="totalHours">Horas totales:</string>
    <string name="hours">Horas</string>
    <string name="project">Proyecto</string>
    <string name="sub">Sub</string>
    <string name="task">Tarea</string>
    <string name="addButton">Añadir</string>
    <string name="removeAllButton">Borrar todas</string>
    <string name="updateButton">Actualizar</string>
    <string name="msgInputProcessExecuting">Ejecutando imputación en batch&#8230;</string>
    <string name="title_activity_month_report">Informe mensual</string>
    <string name="hoursReport">horas</string>
    <string name="msgGettingReportData">Obteniendo datos informe mensual</string>
    <string name="totalReport">TOTAL: </string>
    <string name="monthReportTextButton">Informe mensual</string>
    <string name="shareIn">Compartir en&#8230;</string>
    <string name="populatingDB">Cargando base de datos de proyectos</string>
    <string name="msgPopulateDBError">Error al realizar la carga de proyectos en la base de datos. POR FAVOR, DESLOGATE Y VUELVE A LOGARTE</string>
    <string name="reloadBDButton">Recargar proyectos</string>
    <string name="reloadProjectsButton">Recarga de proyectos</string>
    <string name="msgreloadProjectsToExecute">Se va a actualizar el listado de proyectos</string>
    <string name="msgProjectsReloaded">Lista de proyectos actualizada correctamente</string>
    <string name="defaultProject">Selecciona proyecto</string>
    <string name="defaultSubProject">0 - Sin subcuenta</string>
    <string name="msgRemovingDay">Borrando día</string>
    <string name="msgCopingDay">Copiando día</string>
    <string name="msgDayNotCopied">Primero debes copiar un día con horas imputadas</string>
    <string name="msgDayEqualToCopied">No puedes copiar un día sobre si mismo, pringao&#8230;</string>
    <string name="msgCopiedOK">Copiado registro de horas correctamente</string>
    <string name="msgDayYetEmpty">No hay registros que borrar para ese día</string>
    <string name="copy">Copiar</string>
    <string name="paste">Pegar</string>
    <string name="delete">Borrar</string>
    <string name="optionsMenu">Opciones</string>
</resources>