<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageButton
        android:id="@+id/imageButtonListMonth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/monthListTitle"
        android:onClick="doShowListMonth"
        android:src="@drawable/calendar_img" />

    <TextView
        android:id="@+id/ListMonthTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageButtonListMonth"
        android:layout_centerHorizontal="true"
        android:text="@string/inputAndCheckByDayButton" />

    <ImageButton
        android:id="@+id/imageButtonBatch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ListMonthTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/batchInputButton"
        android:onClick="doShowBatchMenu"
        android:src="@drawable/batch_img" />

    <TextView
        android:id="@+id/BatchTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageButtonBatch"
        android:layout_centerHorizontal="true"
        android:text="@string/monthBatchInputButton" />

</RelativeLayout>