<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/logoMN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/mnLogoS"
        android:src="@drawable/ic_launcher" />

    <EditText
        android:id="@+id/userMNText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="70dp"
        android:hint="@string/userMNTextS"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/passMNText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userMNText"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="18dp"
        android:hint="@string/passMNTextS"
        android:inputType="textPassword" >
    </EditText>

    <LinearLayout
        android:id="@+id/linearLayoutConnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passMNText"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="22dp"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/rememberUserCheck"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:text="@string/remmbemberUserCheckS" />

        <Button
            android:id="@+id/connectButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:onClick="doLogin"
            android:text="@string/connectButtonS" />
    </LinearLayout>

</RelativeLayout>